# wordle-rs

./: Cargo.toml  bench results  kotobade-asobou-list  kotobade-asobou-wordlist.py  numpy-edition.py  words-kura
src/: main.rs  thin_array.rs
