[package]
name = "wordle-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
rayon = "1.5"
bitintr = "0.3.0"
itertools = "0.10.2"
array-init = "2.0.0"
ahash = { version = "0.7.6", optional = true }
xxhash-rust = { version = "0.8.2", features = ["xxh3"], optional = true }
